<resources>
    <string name="app_name">Trassierra Daily</string>
    <string name="TextoInicial">Help us improve our products and services </string>
    <string name="BotonEmpezar">Start</string>
    <string name="tvTituloDatos">Some facts about you </string>
    <string name="tvEdad">Age</string>
    <string name="etGenero">Gender</string>
    <string name="generoHombre">Male</string>
    <string name="generoMujer">Female</string>
    <string name="generoOtro">Other</string>
    <string name="tvProvincia">Province</string>
    <string name="tvInfoLegal">Legal Information</string>
    <string name="tvTextoInfo">The elaboration of this questionnaire is completely anonymous. The information collected will only be used for statistical and training purposes. At no time will any information obtained be used or provided to third parties. For any clarification, you can contact Diario de Trassierra through the email account info@diariotrassierra.com</string>
    <string name="botonContinuar">Continue</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tituloCuestionario">Quiz</string>
    <string name="pregunta1">How long have you been using Diario de Trassierra´s products/services?</string>
    <string name="preg11">Less than a month</string>
    <string name="preg12">Between 6 months and a year</string>
    <string name="preg13">Between 1 and 3 years</string>
    <string name="preg14">More than 3 years</string>
    <string name="pregunta2">How did you find out about the Diario de Trassierra website?</string>
    <string name="preg21">Radio</string>
    <string name="preg22">Internet</string>
    <string name="preg23">Our newspaper and magazine products</string>
    <string name="preg24">Friends, colleagues or contacts</string>
    <string name="pregunta3">Will you enter the Diario de Trassierra website again?</string>
    <string name="preg31">For sure yes</string>
    <string name="preg32">Probably yes</string>
    <string name="preg33">Probably no</string>
    <string name="preg34">Sure not</string>
    <string name="pregunta4">From which device do you usually consult our electronic services?</string>
    <string name="preg41">Smartphone</string>
    <string name="preg42">Tablet</string>
    <string name="preg43">Laptop</string>
    <string name="preg44">Others</string>
    <string name="pregunta5">Would you be willing to purchase a premium digital subscription?</string>
    <string name="preg51">No i`m not willing to pay</string>
    <string name="preg52">Yes, I would be willing to pay between 5 and 10 euros per month</string>
    <string name="preg53">Yes, I would be willing to pay more than 10 euros per month</string>
    <string name="preg54">I`m not sure</string>
    <string name="pregunta6">What do you think of our paper subscription service?</string>
    <string name="preg61">I do not use it, it is an obsolete medium that is doomed to disappear</string>
    <string name="preg62">I do not use it, but several people close to me continue to use this format</string>
    <string name="preg63">I use it on specific occasions</string>
    <string name="preg64">I use it daily and it seems much better than the electronic format</string>
    <string name="pregunta7">Please tell us your overall satisfaction with the Diario de Trassierra website</string>
    <string name="preg71">Bad</string>
    <string name="preg72">Regular</string>
    <string name="preg73">Good</string>
    <string name="preg74">Very good</string>
    <string name="pregunta8">Would you recommend the services of Diario de Trassierra to your family or friends?</string>
    <string name="preg81">For sure yes</string>
    <string name="preg82">Probably yes</string>
    <string name="preg83">Probably no</string>
    <string name="preg84">Sure not</string>
    <string name="BotonSiguiente">NEXT</string>
    <string name="botonFinalizar">Finish</string>
    <string name="textConfirmacion">Confirmation</string>
    <string name="tvExito">Quiz completed succesfully!</string>
    <string name="DatosUsuario">User data:</string>
    <string name="tituloRespuestas">Saved answers:</string>
    <string name="datosServidos">Send data</string>
    <string name="tituloServidor">Server response:</string>
    <string name="botonVolver">RETURN</string>
    <string name="MAcercaDe">About</string>
    <string name="MAyuda">Help</string>
    <string name="tvNombreApp">Trassierra´s Daily</string>
    <string name="tvAutor">José María Sáez Castro</string>
    <string name="tvCurso">Course: 2021-2022</string>
    <string name="tvAyuda">Help</string>
    <string name="tvInfoAyuda">This Trassierra Diary application is the first mobile application to put students knowledge into practice. Its operation is as follows. First it has a welcome page in which we have a button to start entering the user`s data, after filling in the user`s information anonymously, a questionnaire consisting of 8 questions is passed to assess the user´s knowledge about our application, how You have heard about it and what you think, finally, if you decide, you can send the user information with the answers of your personal data to a server. It also has a menu where you can see information about the creator and the creation date of the application and another menu option where you will see this application help to understand it better.</string>
</resources>