<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmento3" >

    <RadioGroup
        android:id="@+id/rg3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPregunta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta3"
            android:textColor="#363636"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rb31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg31" />

        <RadioButton
            android:id="@+id/rb32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg32" />

        <RadioButton
            android:id="@+id/rb33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg33" />

        <RadioButton
            android:id="@+id/rb34"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg34" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>