<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmento5" >

    <RadioGroup
        android:id="@+id/rg5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPregunta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta5"
            android:textColor="#363636"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rb51"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg51" />

        <RadioButton
            android:id="@+id/rb52"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg52" />

        <RadioButton
            android:id="@+id/rb53"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg53" />

        <RadioButton
            android:id="@+id/rb54"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preg54" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>