<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Saez_Castro_JoseMaria_TareaFinal_Tema2"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".SecundaryActivity">

    <ImageView
        android:id="@+id/ivFondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo_diario_trassierra" />

    <ImageView
        android:id="@+id/imLogo"
        android:layout_width="77dp"
        android:layout_height="73dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_diario_trassierra" />

    <TextView
        android:id="@+id/tvTituloDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tvTituloDatos"
        android:textAlignment="center"
        android:textColor="#363636"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/imLogo" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="56dp"
        android:layout_height="48dp"
        android:ems="10"
        android:textSize="15dp"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEdad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toEndOf="@+id/tvEdad"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/rgGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvGenero">

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:text="@string/generoHombre"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:text="@string/generoMujer"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/rbOtro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="0.75"
            android:scaleY="0.75"
            android:text="@string/generoOtro"
            android:textSize="16dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/etGenero"
        android:textColor="#363636"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvEdad" />

    <TextView
        android:id="@+id/tvEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvEdad"
        android:textColor="#363636"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloDatos" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <TextView
        android:id="@+id/tvProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tvProvincia"
        android:textColor="#363636"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/rgGenero" />

    <Spinner
        android:id="@+id/spListaP"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/tvProvincia"
        app:layout_constraintTop_toBottomOf="@+id/rgGenero"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvInfoLegal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvInfoLegal"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/swDatos" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoLegal">

        <TextView
            android:id="@+id/tvTextoInfo"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="12dp"
            android:text="@string/tvTextoInfo"
            android:textSize="12dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/tvInfoLegal" />

    </ScrollView>

    <Button
        android:id="@+id/bContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/botonContinuar"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <Switch
        android:id="@+id/swDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:minHeight="48dp"
        android:text="@string/datosServidos"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spListaP" />


</androidx.constraintlayout.widget.ConstraintLayout>